--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <ul>
         <li><a class="active" href="#home">Home</a></li>
-        <li><a href="https://bit.ly/30kDO4f">add bot</a></li>
+        <li><a href="https://bit.ly/3okDO4f">add bot</a></li>
         <li><a href="/contact.html">Contact</a></li>
         <li><a href="/about.html">About</a></li>
     </ul>
