--- a/w/commandlist.html
+++ b/w/commandlist.html
@@ -26,6 +26,7 @@
         <li class="navli"><a href="https://bit.ly/3okDO4f">add bot</a></li>
         <li class="navli"><a href="/w/contact.html">Contact</a></li>
         <li class="navli"><a href="/w/about.html">About</a></li>
+        <li class="navli"><a href="https://top.gg/bot/740964189660774482">top.gg</a></li>
         <li class="navli"><a href="https://discord.gg/fDdJMcnG42">Support server</a></li>
         
     </ul>
