--- a/w/contact.html
+++ b/w/contact.html
@@ -4,8 +4,8 @@
 <head>
     <meta content="official shrekbot" property="og:title">
     <meta content="its shrekbot! the best and only shrek bot for discord" property="og:description">
-    <meta content="http://officialshrekbot.rf.gd/" property="og:url">
-    <meta content="http://officialshrekbot.rf.gd/img/shrek.png" property="og:image">
+    <meta content="http://shrekbot.tk/" property="og:url">
+    <meta content="http://shrekbot.tk/img/shrek.png" property="og:image">
     <meta content="#00D1FF" data-react-helmet="true" name="theme-color">
 
 
@@ -21,26 +21,23 @@
     <h1 class="shrek-title" >all things shrek</h1>
 
     <ul id="navbar" class="navbar">
-        <li class="navli firstli"><a href="http://officialshrekbot.rf.gd/">Home</a></li>
+        <li class="navli firstli"><a class="active" href="http://shrekbot.tk/">Home</a></li>
         <li class="navli"><a href="/w/commandlist.html">Commands</a></li>
-        <li class="navli"><a href="https://bit.ly/3okDO4f">add bot</a></li>
-        <li class="navli"><a class="active" href="/w/contact.html">Contact</a></li>
+        <li class="navli"><a href="shrekbot.tk/addbot.html">add bot</a></li>
+        <li class="navli"><a href="/w/contact.html">Contact</a></li>
         <li class="navli"><a href="/w/about.html">About</a></li>
         <li class="navli"><a href="https://top.gg/bot/740964189660774482">top.gg</a></li>
         <li class="navli"><a href="https://discord.gg/fDdJMcnG42">Support server</a></li>
-        
     </ul>
-
-
       
         <div class="content">
         <h1>contact</h1>
         <hr>
         <p>well hello there... you would like to contact Shrek? to be honest who wouldn't. but I regret to inform you that you cant contact Shrek here but you could contact the boring developer to say how grate the Shrek bot is or to give them a scolding because the bot isn't doing [insert dank meme command here insert]</p>
         <p>there are two ways we can do this. £5 then we'll talk yeah?.. ok then you can contact me by email or the support server by @its-time-to-talk in a chat and I will get back to you as soon as I can.</p>
-            <p style="font-size: 116%;color: rgb(76, 0, 255);">email: <a href="mailto:dev@officialshrekbot.rf.gd">dev@officialshrekbot.rf.gd</a> </p>
+            <p style="font-size: 116%;color: rgb(76, 0, 255);">email: <a href="mailto:dev@shrekbot.tk">dev@shrekbot.tk</a> </p>
                 <br>
-                <p>go on clicking it and it opens emails automagically.</p>
+                <p>go on, clicking it will open email app automagically.</p>
    </div>
 
 </body>
