--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta content="official shrekbot" property="og:title">
     <meta content="its shrekbot! the best and only shrek bot for discord" property="og:description">
-    <meta content="http://officialshrekbot.rf.gd/" property="og:url">
-    <meta content="http://officialshrekbot.rf.gd/img/shrek.png" property="og:image">
+    <meta content="http://shrekbot.tk/" property="og:url">
+    <meta content="http://shrekbot.tk/img/shrek.png" property="og:image">
     <meta content="#00D1FF" data-react-helmet="true" name="theme-color">
 
 
@@ -21,18 +21,15 @@
     <h1 class="shrek-title" >all things shrek</h1>
 
     <ul id="navbar" class="navbar">
-        <li class="navli firstli"><a class="active" href="http://officialshrekbot.rf.gd/">Home</a></li>
+        <li class="navli firstli"><a class="active" href="http://shrekbot.tk/">Home</a></li>
         <li class="navli"><a href="/w/commandlist.html">Commands</a></li>
-        <li class="navli"><a href="https://bit.ly/3okDO4f">add bot</a></li>
+        <li class="navli"><a href="shrekbot.tk/addbot.html">add bot</a></li>
         <li class="navli"><a href="/w/contact.html">Contact</a></li>
         <li class="navli"><a href="/w/about.html">About</a></li>
         <li class="navli"><a href="https://top.gg/bot/740964189660774482">top.gg</a></li>
         <li class="navli"><a href="https://discord.gg/fDdJMcnG42">Support server</a></li>
-        
     </ul>
 
-
-      
         <div class="content">
         <p>the only bot you'll ever need for all your Shrek related content and memes we have loads of commands and we are constantly adding more you can use the navigation bar to see a list of all current commands and to join the support server we would be happy to see you so come and chat and get some Shrek support.</a></p>
         <p>some photos of command usage.</p>
