--- a/index.html
+++ b/index.html
@@ -2,41 +2,67 @@
 <html lang="en">
 
 <head>
-    <meta content="official shrekbot" property="og:title">
+    <meta charset="UTF-8">
+
+    <title>Shrekbot</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- meta -->
+    <meta content="Shrekbot" property="og:title">
     <meta content="its shrekbot! the best and only shrek bot for discord" property="og:description">
     <meta content="http://shrekbot.tk/" property="og:url">
     <meta content="http://shrekbot.tk/img/shrek.png" property="og:image">
     <meta content="#00D1FF" data-react-helmet="true" name="theme-color">
 
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shrekbot</title>
-
+    <!-- links ans scripts -->
     <link rel="stylesheet" href="./assets/styles.css">
     <script defer src="./assets/client.js"></script>
+
+    <!-- cookieConsent -->
+    <link rel="stylesheet" type="text/css" href="cookieConsent/cookie.css" async />
+    <script src="cookieConsent/cookie.js" async></script>
+    <!--               -->
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {},
+            Tawk_LoadStart = new Date();
+        (function() {
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5ff86542a9a34e36b96a61dc/1erh4n3cf';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
+
 </head>
 
 <body>
-    <h1 class="shrek-title" >all things shrek</h1>
+    <h1 class="shrek-title">Shrekbot</h1>
 
     <ul id="navbar" class="navbar">
         <li class="navli firstli"><a class="active" href="http://shrekbot.tk/">Home</a></li>
         <li class="navli"><a href="/w/commandlist.html">Commands</a></li>
-        <li class="navli"><a href="http://shrekbot.tk/addbot.html">add bot</a></li>
+        <li class="navli"><a href="/w/addbot.html">add bot</a></li>
         <li class="navli"><a href="/w/contact.html">Contact</a></li>
         <li class="navli"><a href="/w/about.html">About</a></li>
         <li class="navli"><a href="https://top.gg/bot/740964189660774482">top.gg</a></li>
         <li class="navli"><a href="https://discord.gg/fDdJMcnG42">Support server</a></li>
     </ul>
 
-        <div class="content">
-        <p>the only bot you'll ever need for all your Shrek related content and memes we have loads of commands and we are constantly adding more you can use the navigation bar to see a list of all current commands and to join the support server we would be happy to see you so come and chat and get some Shrek support.</a></p>
+    <div class="content">
+        <p>the only bot you'll ever need for all your Shrek related content and memes we have loads of commands and we are constantly adding more you can use the navigation bar to see a list of all current commands and to join the support server we would
+            be happy to see you so come and chat and get some Shrek support.</a>
+        </p>
         <p>some photos of command usage.</p>
         <p><img class="img" src="./assets/shrekprofile.PNG" /></p>
         <p><img class="img" src="./assets/memecmd.PNG" /></p>
         <p><img class="img" src="./assets/quotecmd.PNG" /></p>
-   </div>
+    </div>
 
 </body>
 
