--- a/w/commandlist.html
+++ b/w/commandlist.html
@@ -2,56 +2,80 @@
 <html lang="en">
 
 <head>
-    <meta content="official shrekbot" property="og:title">
+    <meta charset="UTF-8">
+
+    <title>commandlist - Shrekbot</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- meta -->
+    <meta content="docs - Shrekbot" property="og:title">
     <meta content="its shrekbot! the best and only shrek bot for discord" property="og:description">
-    <meta content="http://shrekbot.tk/" property="og:url">
+    <meta content="http://shrekbot.tk/commandlist.html" property="og:url">
     <meta content="http://shrekbot.tk/img/shrek.png" property="og:image">
     <meta content="#00D1FF" data-react-helmet="true" name="theme-color">
 
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shrekbot</title>
-
+    <!-- links ans scripts -->
     <link rel="stylesheet" href="../assets/styles.css">
     <script defer src="../assets/client.js"></script>
+
+    <!-- cookieConsent -->
+    <link rel="stylesheet" type="text/css" href="../cookieConsent/cookie.css" async />
+    <script src="../cookieConsent/cookie.js" async></script>
+    <!--               -->
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {},
+            Tawk_LoadStart = new Date();
+        (function() {
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5ff86542a9a34e36b96a61dc/1erh4n3cf';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
+
 </head>
 
 <body>
-    <h1 class="shrek-title" >all things shrek</h1>
+    <h1 class="shrek-title">docs - Shrekbot</h1>
 
     <ul id="navbar" class="navbar">
-        <li class="navli firstli"><a class="active" href="http://shrekbot.tk/">Home</a></li>
-        <li class="navli"><a href="/w/commandlist.html">Commands</a></li>
-        <li class="navli"><a href="http://shrekbot.tk/addbot.html">add bot</a></li>
+        <li class="navli firstli"><a href="http://shrekbot.tk/">Home</a></li>
+        <li class="navli"><a class="active" href="/w/commandlist.html">Commands</a></li>
+        <li class="navli"><a href="/w/addbot.html">add bot</a></li>
         <li class="navli"><a href="/w/contact.html">Contact</a></li>
         <li class="navli"><a href="/w/about.html">About</a></li>
         <li class="navli"><a href="https://top.gg/bot/740964189660774482">top.gg</a></li>
         <li class="navli"><a href="https://discord.gg/fDdJMcnG42">Support server</a></li>
     </ul>
-      
-        <div class="content">
-            <div class="cmds">
-                <p>shrek bots default prefix or if the server admin or moderator changed it you would use the custom prefix for that server.<br>If you don't know what the prefix is for that server you can at shrek bot and it will give you the server prefix.
-                    <br><br> &#8226; <a class="bold">@Shrek#0655</a> - if you ping the bot it will reply with a message saying what the prefix for that server is and the help command this is intended to be a simple way for users to know how to use the bot.
-                    all of these commands will start with the
-                    <br>
-                    <br><br>&#8226; <a class="bold">help</a> - this command will send an embed in the channel you sent that command with a list of all commands and a summary of how they work.
-                    <br><br>&#8226; <a class="bold">about</a> - this command will send an embed in the same channel that you sent that command containing information on the bot like the developers, nickname in the server if there is one, bot's uptime, bot's
-                    ping and how to report errors if you encounter any.
-                    <br><br>&#8226; <a class="bold">prefix</a> - if you are a general member of the server you use this command in, it will send an embed saying what the prefix is. If you have the manage messages permission it will send you instructions on
-                    how to change the prefix, this command will also work if you start your message by ating shrek bot this is incase you forget the bots prefix and need to change it.
-                    <br><br>&#8226; <a class="bold">meme</a> - this command will send an embed in the same channel that you sent the command containing a randomised meme from r/shrekmemes.
-                    <br><br>&#8226; <a class="bold">quote</a> - this command will send a message of a randomised shrek quote from the first shrek film in the same channel as you sent the command.
-                    <br><br>&#8226; <a class="bold">coin</a> - shrek will flip a coin and then send a message in the same channel as you executed the command with what you got, heads or tails.
-                    <br><br>&#8226; <a class="bold">8ball {question}</a> - this will give a random answer just like a 8ball in the same channel that you execute the command.
-                    <br><br>&#8226; <a class="bold">dice</a> - shrek will roll a dice and then tell you what you rolled on the same channel as you executed the command.
-                    <br><br>&#8226; <a class="bold">dance</a> - sends a embed of a shrek dancing gif to the channel where you executed the command.
-                </p>
-                <p>need help? join the <a href="https://discord.gg/fDdJMcnG42">support server.</a></p>
-            </div>
-    
-   </div>
+
+    <div class="content">
+        <div class="cmds">
+            <p>shrek bots default prefix or if the server admin or moderator changed it you would use the custom prefix for that server.<br>If you don't know what the prefix is for that server you can at shrek bot and it will give you the server prefix.
+                <br><br> &#8226; <a class="bold">@Shrek#0655</a> - if you ping the bot it will reply with a message saying what the prefix for that server is and the help command this is intended to be a simple way for users to know how to use the bot.
+                all of these commands will start with the
+                <br>
+                <br><br>&#8226; <a class="bold">help</a> - this command will send an embed in the channel you sent that command with a list of all commands and a summary of how they work.
+                <br><br>&#8226; <a class="bold">about</a> - this command will send an embed in the same channel that you sent that command containing information on the bot like the developers, nickname in the server if there is one, bot's uptime, bot's
+                ping and how to report errors if you encounter any.
+                <br><br>&#8226; <a class="bold">prefix</a> - if you are a general member of the server you use this command in, it will send an embed saying what the prefix is. If you have the manage messages permission it will send you instructions on
+                how to change the prefix, this command will also work if you start your message by ating shrek bot this is incase you forget the bots prefix and need to change it.
+                <br><br>&#8226; <a class="bold">meme</a> - this command will send an embed in the same channel that you sent the command containing a randomised meme from r/shrekmemes.
+                <br><br>&#8226; <a class="bold">quote</a> - this command will send a message of a randomised shrek quote from the first shrek film in the same channel as you sent the command.
+                <br><br>&#8226; <a class="bold">coin</a> - shrek will flip a coin and then send a message in the same channel as you executed the command with what you got, heads or tails.
+                <br><br>&#8226; <a class="bold">8ball {question}</a> - this will give a random answer just like a 8ball in the same channel that you execute the command.
+                <br><br>&#8226; <a class="bold">dice</a> - shrek will roll a dice and then tell you what you rolled on the same channel as you executed the command.
+                <br><br>&#8226; <a class="bold">dance</a> - sends a embed of a shrek dancing gif to the channel where you executed the command.
+            </p>
+            <p>need help? join the <a href="https://discord.gg/fDdJMcnG42">support server.</a></p>
+        </div>
+
+    </div>
 
 </body>
 
