--- a/w/contact.html
+++ b/w/contact.html
@@ -2,43 +2,68 @@
 <html lang="en">
 
 <head>
-    <meta content="official shrekbot" property="og:title">
+    <meta charset="UTF-8">
+
+    <title>contact - Shrekbot</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- meta -->
+    <meta content="Contact - Shrekbot" property="og:title">
     <meta content="its shrekbot! the best and only shrek bot for discord" property="og:description">
-    <meta content="http://shrekbot.tk/" property="og:url">
+    <meta content="http://shrekbot.tk/w/contact.html" property="og:url">
     <meta content="http://shrekbot.tk/img/shrek.png" property="og:image">
     <meta content="#00D1FF" data-react-helmet="true" name="theme-color">
 
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shrekbot</title>
-
+    <!-- links ans scripts -->
     <link rel="stylesheet" href="../assets/styles.css">
     <script defer src="../assets/client.js"></script>
+
+    <!-- cookieConsent -->
+    <link rel="stylesheet" type="text/css" href="../cookieConsent/cookie.css" async />
+    <script src="../cookieConsent/cookie.js" async></script>
+    <!--               -->
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {},
+            Tawk_LoadStart = new Date();
+        (function() {
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5ff86542a9a34e36b96a61dc/1erh4n3cf';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
+
 </head>
 
 <body>
-    <h1 class="shrek-title" >all things shrek</h1>
+    <h1 class="shrek-title">Contact - shrekbot</h1>
 
     <ul id="navbar" class="navbar">
-        <li class="navli firstli"><a class="active" href="http://shrekbot.tk/">Home</a></li>
+        <li class="navli firstli"><a href="http://shrekbot.tk/">Home</a></li>
         <li class="navli"><a href="/w/commandlist.html">Commands</a></li>
-        <li class="navli"><a href="http://shrekbot.tk/addbot.html">add bot</a></li>
-        <li class="navli"><a href="/w/contact.html">Contact</a></li>
+        <li class="navli"><a href="/w/addbot.html">add bot</a></li>
+        <li class="navli"><a class="active" href="/w/contact.html">Contact</a></li>
         <li class="navli"><a href="/w/about.html">About</a></li>
         <li class="navli"><a href="https://top.gg/bot/740964189660774482">top.gg</a></li>
         <li class="navli"><a href="https://discord.gg/fDdJMcnG42">Support server</a></li>
     </ul>
-      
-        <div class="content">
+
+    <div class="content">
         <h1>contact</h1>
         <hr>
-        <p>well hello there... you would like to contact Shrek? to be honest who wouldn't. but I regret to inform you that you cant contact Shrek here but you could contact the boring developer to say how grate the Shrek bot is or to give them a scolding because the bot isn't doing [insert dank meme command here insert]</p>
-        <p>there are two ways we can do this. £5 then we'll talk yeah?.. ok then you can contact me by email or the support server by @its-time-to-talk in a chat and I will get back to you as soon as I can.</p>
-            <p style="font-size: 116%;color: rgb(76, 0, 255);">email: <a href="mailto:dev@shrekbot.tk">dev@shrekbot.tk</a> </p>
-                <br>
-                <p>go on, clicking it will open email app automagically.</p>
-   </div>
+        <p>well hello there... you would like to contact Shrek? to be honest who wouldn't. but I regret to inform you that you cant contact Shrek here but you could contact the boring developer to say how grate the Shrek bot is or to give them a scolding
+            because the bot isn't doing [insert dank meme command here insert]</p>
+        <p>Please use our live chat in the bottom right hand connor if you experience any issues using it or with the person/people you talk to please email the email below with the ticket id if you still have it</p>
+        <p style="font-size: 116%;color: rgb(76, 0, 255);">email: <a href="mailto:dev@shrekbot.tk">dev@shrekbot.tk</a> </p>
+        <br>
+        <p>go on, clicking it will open email app automagically.</p>
+    </div>
 
 </body>
 
