--- a/w/about.html
+++ b/w/about.html
@@ -2,44 +2,68 @@
 <html lang="en">
 
 <head>
-    <meta content="official shrekbot" property="og:title">
+    <meta charset="UTF-8">
+
+    <title>About - Shrekbot</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- meta -->
+    <meta content="about - Shrekbot" property="og:title">
     <meta content="its shrekbot! the best and only shrek bot for discord" property="og:description">
-    <meta content="http://shrekbot.tk/" property="og:url">
+    <meta content="http://shrekbot.tk/w/about.html" property="og:url">
     <meta content="http://shrekbot.tk/img/shrek.png" property="og:image">
     <meta content="#00D1FF" data-react-helmet="true" name="theme-color">
 
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shrekbot</title>
-
+    <!-- links ans scripts -->
     <link rel="stylesheet" href="../assets/styles.css">
     <script defer src="../assets/client.js"></script>
+
+    <!-- cookieConsent -->
+    <link rel="stylesheet" type="text/css" href="../cookieConsent/cookie.css" async />
+    <script src="../cookieConsent/cookie.js" async></script>
+    <!--               -->
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {},
+            Tawk_LoadStart = new Date();
+        (function() {
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5ff86542a9a34e36b96a61dc/1erh4n3cf';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
+
 </head>
 
 <body>
-    <h1 class="shrek-title" >all things shrek</h1>
+    <h1 class="shrek-title">About - Shrekbot</h1>
 
     <ul id="navbar" class="navbar">
-        <li class="navli firstli"><a class="active" href="http://shrekbot.tk/">Home</a></li>
+        <li class="navli firstli"><a href="http://shrekbot.tk/">Home</a></li>
         <li class="navli"><a href="/w/commandlist.html">Commands</a></li>
-        <li class="navli"><a href="http://shrekbot.tk/addbot.html">add bot</a></li>
+        <li class="navli"><a href="/w/addbot.html">add bot</a></li>
         <li class="navli"><a href="/w/contact.html">Contact</a></li>
-        <li class="navli"><a href="/w/about.html">About</a></li>
+        <li class="navli"><a class="active" href="/w/about.html">About</a></li>
         <li class="navli"><a href="https://top.gg/bot/740964189660774482">top.gg</a></li>
         <li class="navli"><a href="https://discord.gg/fDdJMcnG42">Support server</a></li>
     </ul>
 
 
-        <div class="content">
+    <div class="content">
         <h1>About</h1>
         <hr>
         <p>this is going to be all about the Shrek bot and this website I promise
-            <br><br>
-            this bot is a meme bot based on the character Shrek. It was made because all of the bots out there either don’t work or are offline. It has a number of fun commands and I try to improve this bot all the time. This bot has a number of cool commands that you can use and I add more all the time One of the main features of this bot is that there is a meme command that gets a random meme from the r/shrekmemes subreddit and sends it in the channel you requested it. 
-            <br><br>
-            as you can see this website has a free subdomain from a free host we also have the following subdomains for the Shrek bots website they all lead back to here some way or another shrekbot.is-great.net shrek.is-great.org shrekbot.is-great.org shrek.is-great.net honestly I don't know why we have so many it was late on a Friday </p>
-   </div>
+            <br><br> this bot is a meme bot based on the character Shrek. It was made because all of the bots out there either don’t work or are offline. It has a number of fun commands and I try to improve this bot all the time. This bot has a number
+            of cool commands that you can use and I add more all the time One of the main features of this bot is that there is a meme command that gets a random meme from the r/shrekmemes subreddit and sends it in the channel you requested it.
+            <br><br> as you can see this website has a free subdomain from a free host we also have the following subdomains for the Shrek bots website they all lead back to here some way or another shrekbot.is-great.net shrek.is-great.org shrekbot.is-great.org
+            shrek.is-great.net honestly I don't know why we have so many it was late on a Friday </p>
+    </div>
 
 </body>
 
