--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <script defer src="./assets/client.js"></script>
 
     <!-- cookieConsent -->
-    <link rel="stylesheet" type="text/css" href="cookieConsent/cookie.css" async />
-    <script src="cookieConsent/cookie.js" async></script>
+    <link rel="stylesheet" type="text/css" href="./cookieConsent/cookie.css" async />
+    <script src="./cookieConsent/cookie.js" async></script>
     <!--               -->
 
     <!--Start of Tawk.to Script-->
