--- a/w/addbot.html
+++ b/w/addbot.html
@@ -61,6 +61,8 @@
         <hr />
         <p><a href="https://discord.com/oauth2/authorize?client_id=740964189660774482&scope=bot&permissions=99998785">shrek bot</a></p>
         <p><a href="https://discord.com/oauth2/authorize?client_id=787785701831081994&scope=bot&permissions=70638657">shrek bot 2</a></p>
+        <p><a href="https://discord.com/oauth2/authorize?client_id=798327813651955744&scope=bot&permissions=70638657">shrek bot 3</a></p>
+        
     </div>
 
 </body>
