up detector added removed tawk.to

--- a/index.html
+++ b/index.html
@@ -18,26 +18,6 @@
     <link rel="stylesheet" href="./assets/styles.css">
     <script defer src="./assets/client.js"></script>
 
-    <!-- cookieConsent -->
-    <link rel="stylesheet" type="text/css" href="./cookieConsent/cookie.css" async />
-    <script src="./cookieConsent/cookie.js" async></script>
-    <!--               -->
-
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-        var Tawk_API = Tawk_API || {},
-            Tawk_LoadStart = new Date();
-        (function() {
-            var s1 = document.createElement("script"),
-                s0 = document.getElementsByTagName("script")[0];
-            s1.async = true;
-            s1.src = 'https://embed.tawk.to/5ff86542a9a34e36b96a61dc/1erh4n3cf';
-            s1.charset = 'UTF-8';
-            s1.setAttribute('crossorigin', '*');
-            s0.parentNode.insertBefore(s1, s0);
-        })();
-    </script>
-    <!--End of Tawk.to Script-->
 
 </head>
 
@@ -53,6 +33,8 @@
         <li class="navli"><a href="https://top.gg/bot/740964189660774482">top.gg</a></li>
         <li class="navli"><a href="https://discord.gg/fDdJMcnG42">Support server</a></li>
     </ul>
+    
+    <iframe src="https://shrek-bot.instatus.com/embed-status/system-md" width="230" height="61" frameBorder="0" scrolling="no" style="border: none;"></iframe>
 
     <div class="content">
         <p>the only bot you'll ever need for all your Shrek related content and memes we have loads of commands and we are constantly adding more you can use the navigation bar to see a list of all current commands and to join the support server we would
