added status top the nav bar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <ul id="navbar" class="navbar">
         <li class="navli firstli"><a class="active" href="http://shrekbot.tk/">Home</a></li>
         <li class="navli"><a href="/w/commandlist.html">Commands</a></li>
+        <li class="navli"><a href="https://shrek-bot.instatus.com/">stauts</a></li>
         <li class="navli"><a href="/w/addbot.html">add bot</a></li>
         <li class="navli"><a href="/w/contact.html">Contact</a></li>
         <li class="navli"><a href="/w/about.html">About</a></li>
