--- a/s/index.html
+++ b/s/index.html
@@ -30,8 +30,7 @@ gtag('config', 'UA-172417649-1');
   <center>
   <h1 class="txt" style="font-size:300%;color:green" >you've been shreked</h1>
   <p class="txt" style="font-size:110%;">
-Yes you just been shreked. shreked to the point of no return so shreked that you can't even watch shrek without remembering this what you did. Next time try buying the game
-you wanted this way you support the game developer and they can make more games, they aren't even that expensive, now you are here have a look at some shrek videos.
+Yes you just been shreked. shreked to the point of no return so shreked that you can't even watch shrek without remembering this what you did, now you are here have a look at some shrek videos.
   </p>
   <!-- haha html go brrrr -->
   <br>
@@ -43,7 +42,7 @@ you wanted this way you support the game developer and they can make more games,
   <iframe class="shrek" width="560" height="315" src="https://www.youtube.com/embed/VA6aBIOq_n0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p class="txt" style="font-size:110%;">get shrieked!</p>
   </center>
-    <p style="text-align:left;font-size:95%;bottom:0;left:0;position:fixed;">I in no way condone piracy it is a crime in most countrys. this is just a troll so get shreked</p>
+    <p>made by: <a href="http://invaliduser.gitlab.io/">http://invaliduser.gitlab.io/</a></p>
 </div>
 </body>
 <!--this is index.html of http://friiishop.us.to/ made by https://github.com/404invalid-user/ -->
